--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "psr-4": {
             "GPBMetadata\\": "src/models/GPBMetadata",
             "Tinkoff\\": "src/models/Tinkoff",
-            "Metaseller\\TinkoffInvestApi2": "src"
+            "Metaseller\\TinkoffInvestApi2\\": "src"
         }
     }
 }
