--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "metaseller/tinkoff-invest-api-v2-php",
+    "version": "0.1.2",
     "description": "Unofficial PHP SDK for Tinkoff Invest API v2",
     "type": "library",
     "license": "Apache-2.0",
