--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "metaseller/tinkoff-invest-api-v2-php",
-    "version": "0.3.1",
+    "version": "0.3.2",
     "description": "Unofficial PHP SDK for Tinkoff Invest API v2",
     "type": "library",
     "license": "Apache-2.0",
@@ -29,7 +29,8 @@
             "Tinkoff\\": "src/models/Tinkoff",
             "Metaseller\\TinkoffInvestApi2\\": "src",
             "Metaseller\\TinkoffInvestApi2\\providers\\": "src/providers",
-            "Metaseller\\TinkoffInvestApi2\\exceptions\\\\": "src/exceptions"
+            "Metaseller\\TinkoffInvestApi2\\exceptions\\": "src/exceptions",
+            "Metaseller\\TinkoffInvestApi2\\helpers\\": "src/helpers"
         }
     }
 }
