--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": ">=7.4.0",
         "ext-grpc": "^1.43",
         "grpc/grpc": "^1.42",
-        "google/protobuf": "^3.19"
+        "google/protobuf": "^3.19",
+        "ext-bcmath": "*"
     },
     "autoload": {
         "psr-4": {
